--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 	</header>
 <div class="head-content">
 	<img src="./assets/espn.svg">
-
 	<h2>Get endless entertainment, live sports, and the shows and movies you love.</h2>
 	<button class="green-btn">GET THE DISNEY BUNDLE</button>
-	<a href="">Sifn up for Hulu only</a>
+	<a href="">Sign up for Hulu only</a>
 </div>
 </div>
 
@@ -83,7 +82,7 @@
 	</div>
 	</div>
 	
-	<div class="sec-1-texts">
+	<div class="sec-1-texts-two">
 		<h3>HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+</h3>
 		<h1>Live TV Makes It Better</h1>
 		<p>Make the switch from cable. Get 75+ top channels on Hulu + Live TV with your favorite live sports, news, and events - plus the entire Hulu streaming library. With Unlimited DVR, store Live TV recordings for up to nine months and fast-forward through your DVR content. Access endless entertainment with Disney+ and live sports with ESPN+. For a limited time, save $20/month for 3 months. Ends 10/5. </p>
@@ -98,7 +97,9 @@
 
 
 	<!-- clicky section --> 
+	
 <section class="sec-2" id="sec-2">
+<div class="sec-2-container">
 	<div class="switch">
 <div class="switch-buttons">
 	<button id="btn1">LIVE SPORTS</button><button id="btn2">BREAKING NEWS</button><button id="btn3">BIGGEST EVENTS</button>
@@ -124,7 +125,8 @@
 Regional restrictions, blackouts and Additional
  terms apply.</p>
 </div>
-
+</div>
+</div>
 </section>
 
 
